2002-05-21  Sam Steingold  <sds@gnu.org>

	* encoding.d (MAKE-ENCODING): when the iconv charset is already
	built-in use it instead of iconv
	(ENCODING-CHARSET): new function
	* constsym.d, subr.d: added encoding_charset
	* init.lisp: export ENCODING-CHARSET

2002-05-21  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [GCC]: no optimization with GCC-3.1

2002-05-20  Bruno Haible  <bruno@clisp.org>

	* stream.d (wr_ch_array_pphel_): Remove function.
	(wr_ch_array_pphelp): Inline it here.

2002-05-20  Bruno Haible  <bruno@clisp.org>

	* charstrg.d (CHAR, SYSTEM::STORE-CHAR): Correct checking of validity
	of index. Don't use unpack_string here.
	(unpack_string): Remove function.
	(unpack_string_ro): Inline old unpack_string.
	(unpack_string_rw): Call unpack_string_ro, not unpack_string.

2002-05-20  Bruno Haible  <bruno@clisp.org>

	Remove gcc-3.0.4 warning.
	* eval.d (LD, LR): Don't use CONCAT to paste strings; justaposing the
	strings is sufficient.

2002-05-19  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACK_register) [S390]: adjusted 2002-03-24 patch
	to use the register on GCC-3.1 or better

2002-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (stdbool.h): sed RE depends on TOS: not all systems
	use autoconf [actually, it is not clear that it is legitimate to
	expect a non-UNIX system to have sed; cygwin is ubiquitous though,
	so win32 is, hopefully, covered]

2002-05-18  Arseny Slobodjuck  <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	graceful disconnect and interruptible wait in win32
	* stream.d (low_close_socket) [WIN32_NATIVE]: do not shutdown
	a socket: shutdown does not respect the linger option.
	To use shutdown for graceful disconnect, one should implement
	a kind of protocol, i.e. shutdown SEND and wait for client
	acknowledgment (client should support that protocol).
	(SOCKET-WAIT) [WIN32_NATIVE]: use interruptible_wait()
	(SOCKET-STREAM-SHUTDOWN): explicitly cast handle to stream